# MEPHI_FastAPI_lesson

./: .gitignore  README.adoc  pyproject.toml  requirements.txt  setup.py  setup_uv.sh
app/: forms.py  handlers.py  main.py  query.py
